--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
 <h1>How are you</h1>
 <form action="Name">Enter your name</form>
 <progress></progress>
+<a href="Style.css"> This is Style for html</a>
 
 </body>
 </html>
