--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,25 @@
 <h1>How are you</h1>
 <form action="Name">Enter your name</form>
 <progress></progress>
-<a href="Style.css"> This is Style for html</a>
+<a href="gethub.com"> This is Style for html</a>
 
+
+<style>
+    
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+
+</style>
 </body>
 </html>
