--- a/Index.html
+++ b/Index.html
@@ -17,17 +17,17 @@
 <style>
     
 body {
-  background-color: lightblue;
+  background-color: rgb(20, 124, 158);
 }
 
 h1 {
-  color: white;
+  color: rgb(240, 72, 72);
   text-align: center;
 }
 
 p {
   font-family: verdana;
-  font-size: 20px;
+  font-size: 40px;
 }
 
 </style>
